# snow-elves

./: .gitignore  CMakeLists.txt  README.en.md  README.md  RESOURCE.rcc  Update.bat  build.bat  response.json  update_body.txt  version.txt
include/: main.h
include/QtUtils/: CustomLineEdit.h  ShortcutKeyLineEdit.h
include/models/: DownloadThread.h  ImageProcess.h  ReadTemp.h  ScreenShotImage.h  TaskManager.h  TaskSchedul.h  TempMatcher.h  WindowManager.h
include/models/Tasks/: AcquisitionTask.h  BasicTask.h  BountyMissionsTask.h  BreakBanTask.h  ChivalryShoutTask.h  DailyCopiesTask.h  DailyRedemptionTask.h  DoorBanTask.h  FactionTask.h  FateSwordTask.h  HeroListTask.h  HexagramDayTask.h  HouseClockTask.h  LessonTask.h  MerchantLakeTask.h  PacifyInjusticeTask.h  PlaceTask.h  RiverTask.h  SectTask.h  Submersion.h  SweepStallTask.h  SwitchRolesTask.h  TeaStoryTask.h  TheSwordTask.h  TheSwordThreeTask.h  UrgentDeliveryTask.h  VientianeTask.h
include/utils/: Factory.h  FunctionLibrary.h  LoadJsonFile.h  LocalServer.h  Signals.h  TaskScheduler.h  Utilities.h
include/views/: HomeWindow.h  LoginWindow.h  MainWindow.h  RenewWindow.h  RunWindow.h  ScriptWindow.h  SettingWindow.h
resources/: main.rc
resources/styles/: style.qss
src/: main.cpp
src/QtUtils/: CustomLineEdit.cpp  ShortcutKeyLineEdit.cpp
src/models/: DownloadThread.cpp  ImageProcess.cpp  ReadTemp.cpp  ScreenShotImage.cpp  TaskManager.cpp  TaskSchedul.cpp  TempMatcher.cpp  WindowManager.cpp
src/models/Tasks/: AcquisitionTask.cpp  BasicTask.cpp  BountyMissionsTask.cpp  BreakBanTask.cpp  ChivalryShoutTask.cpp  DailyCopiesTask.cpp  DailyRedemptionTask.cpp  DoorBanTask.cpp  FactionTask.cpp  FateSwordTask.cpp  HeroListTask.cpp  HexagramDayTask.cpp  HouseClockTask.cpp  LessonTask.cpp  MerchantLakeTask.cpp  PacifyInjusticeTask.cpp  PlaceTask.cpp  RiverTask.cpp  SectTask.cpp  Submersion.cpp  SweepStallTask.cpp  SwitchRolesTask.cpp  TeaStoryTask.cpp  TheSwordTask.cpp  TheSwordThreeTask.cpp  UrgentDeliveryTask.cpp  VientianeTask.cpp
src/utils/: Factory.cpp  FunctionLibrary.cpp  LoadJsonFile.cpp  LocalServer.cpp  Signals.cpp  TaskScheduler.cpp  Utilities.cpp
src/views/: HomeWindow.cpp  LoginWindow.cpp  MainWindow.cpp  RenewWindow.cpp  RunWindow.cpp  ScriptWIndow.cpp  SettingWindow.cpp
tests/: CMakeLists.txt  tests.cpp
ui/: HomeWindow.ui  LoginWindow.ui  MainWindow.ui  RenewWindow.ui  RunWindow.ui  ScriptWindow.ui  SettingWindow.ui  Ui_HomeWindow.h  Ui_LoginWindow.h  Ui_MainWindow.h  Ui_RenewWindow.h  Ui_RunWindow.h  Ui_ScriptWindow.h  Ui_SettingWindow.h
